@@ -12,6 +12,7 @@ defined('_JEXEC') or die;
 $app = JFactory::getApplication();
 JHtml::addIncludePath(JPATH_COMPONENT.'/helpers');
 
+JHtml::_('behavior.caption');
 ?>
 <div class="categories-list<?php echo $this->pageclass_sfx;?>">
 <?php if ($this->params->get('show_page_heading')) : ?>
